--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://plugin-code.salesmartly.com/js/project_219216_226049_1736656109.js"></script>
   </body>
 </html>
