--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N4MMBQRK');</script>
+    <!-- End Google Tag Manager -->
     <title>Vite App</title>
+
   </head>
   <body>
     <div id="app"></div>
@@ -31,6 +39,10 @@
     fbq('track', 'AddToCart');
   });
 </script>
+          <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4MMBQRK"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
     <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=800105879202787&ev=PageView&noscript=1"/></noscript>
     <script src="https://plugin-code.salesmartly.com/js/project_219216_226049_1736656109.js"></script>
   </body>
